tests/code/pages/errors/max-memory.tht

System.setMaxMemoryMb(3)

$mem = ''

foreach range(1, 10000) as $x {
    foreach range(1, 10000) as $y {
        $mem ~= 'xxxxxxx'.repeat(1_000_000)
    }
}

